fix spacing on mobile since chrome alternately hides and shows the toolbar

--- a/client/styles/less/styles.less
+++ b/client/styles/less/styles.less
@@ -421,7 +421,7 @@ a {
 // xxs overrides xs if necessary
 @media (max-width: @screen-xxs-max) {
 	#intro {
-		padding-top: 105px; padding-top: 10.5rem;
+		padding-top: 85px; padding-top: 8.5rem;
 		padding-bottom: 94px; padding-bottom: 9.4rem;
 	}
 
